If replacing a safebrowsing interstitial, don't call DontProceed on the old one.

Calling DontProceed directly has some side effects like destroying the pending NavigationEntry.
There is already common code in InterstitialPageImpl::Show to handle closing an existing interstitial when showing a new one, and it properly handles the pending NavigationEntry.

BUG=655794

Review-Url: https://codereview.chromium.org/2510003002
Cr-Commit-Position: refs/heads/master@{#435445}

Former-commit-id: 3294450834f7ae8978994a8d2f7f9dd1df3178f2